--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -421,7 +421,7 @@
 
                     @include breakpoint(small only) {
                         padding: 0;
-                        grid-gap: rem-calc(28);
+                        grid-gap: rem-calc(21);
                     }
 
                     .nav-corner-item {
